# ktp-kipi-plugin

./: .reviewboardrc  CMakeLists.txt  import_headers.sh  import_kipi-plugins.sh  kipi-telepathy-dialog.cpp  kipi-telepathy-dialog.h  kipi-telepathy-plugin.cpp  kipi-telepathy-plugin.h  kipi-telepathy-widget.cpp  kipi-telepathy-widget.h  kipiplugin_telepathy.desktop  kipiplugin_telepathy.desktop.cmake  version.h.in
cmake/modules/: FindKTp.cmake  FindKipiPlugins.cmake
libkipiplugins/: gitversion.h  kpversion.h
libkipiplugins/tools/: kprawthumbthread.cpp
